# 8085-Simulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assembler/: assembler.cpp
cpu/: cpu.cpp  cpu.h
memory/: memory.cpp  memory.h
